--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         }
       }
 body {
-  background: #000000;
+  background: url("https://img.freepik.com/free-vector/golden-music-notes-background-design_1017-33910.jpg")
   font-family: "Bitter", serif;
 }
 
